# india_map

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ci/scripts/: check_integration_marks.py
.github/: copilot-instructions.md
.github/actions/: cache-restore.yaml
.github/poetry-cache-restore/: action.yaml
.github/workflows/: ci.yml
01_ee-extract/: export_CO.py  export_dewpoint.py  export_surface_pressure.py  export_total_precipitation.py  export_u_wind.py  export_v_wind.py  gee_utils.py
02_first_stage_ML/: AOD_impute.py  CO_impute.py  NO2_impute.py  feature_engineering.py
02_second_stage_ML/: pm25_pred.py
03_second_stage_ML/: pm25_pred.py
assets/: grid_intersect_with_50km.csv  grid_region.parquet
experiments/: README.md  main_get_nasaed_data.py
experiments/notebooks/: 20250313-rg-estimating_data_size.ipynb  20250416-rg-testdata_for_indiateam.ipynb  20250603-pr-comparing-scale-sum-vs-mean.ipynb  20250610-rg-make_test_shapefile.ipynb  20250611-pr-improve-cateogry-data.ipynb  20250612-pr-ned-omi-file-reading.ipynb  20250612-pr-subsetted.ipynb  20250612-pr-subsetting-using-harmony.ipynb  20250612-pr-subsetting-using-opendap.ipynb  20250625-pr-data-comparison.ipynb  20250625-pr-missing-data.ipynb  20250626-pr-omi-daily-values.ipynb  20250630-pr-lai-comparison.ipynb  20250716-pr-missing-data.ipynb
experiments/parquet_data_tests/thrown_away/: main_combine_parquet_files_batches__duck_db.py
experiments/parquet_data_tests_db/: docker-compose.yml  main_0_data_generator.py  main_1_read_from_database.py
experiments/parquet_data_tests_disk/: main_0_data_generator.py  main_1_combine_parquet_files_batches__pyarrow.py  main_2_split_parquet_by_month.py  main_3_combine_parquet_by_month.py  main_3_data_reader_from_combined_dataset.py
experiments/parquet_data_tests_disk/thrown_away/: main_combine_parquet_files_batches__duck_db_materialised.py  main_combine_parquet_files_single__duck_db.py
experiments/parquet_data_tests_gcs/: main_0_data_generator.py  main_1_combine_dataset_files_to_single_monthly.py  main_1_combine_parquet_files_batches__pyarrow.py  main_2_combine_parquet_by_month.py  main_2_split_parquet_by_month.py  main_3_combine_parquet_by_month.py  main_3_data_reader_from_combined_dataset.py
infra/: pm25ml.yaml  run-large.yaml  run.yaml  workflow.yaml  workflow_with_training.yaml
infra/jobs/: train_aod.yaml  train_aod_gpu.yaml
pm25ml/: hello_world__test.py  hive_path.py  hive_path__test.py  logging.py
pm25ml/collectors/: archive_storage.py  archive_storage__test.py  archived_file_validator.py  archived_file_validator__test.py  constants.py  export_pipeline.py  export_pipeline__test.py  feature_planner.py  feature_planner__test.py  grid_export_pipeline.py  grid_export_pipeline__test.py  grid_loader.py  grid_loader__it.py  pipeline_storage.py  pipeline_storage__test.py  tasks.py  validate_configuration.py  validate_configuration__test.py
pm25ml/collectors/gee/: __init__.py  feature_planner.py  feature_planner__it.py  feature_planner__test.py  gee_export_pipeline.py  gee_export_pipeline__test.py  intermediate_storage.py  intermediate_storage__test.py
pm25ml/collectors/ned/: coord_types__test.py  data_reader_merra.py  data_reader_merra__it.py  data_reader_merra__test.py  data_reader_omno2d.py  data_reader_omno2d__it.py  data_reader_omno2d__test.py  data_readers.py  data_readers__test.py  data_retriever_harmony.py  data_retriever_harmony__test.py  data_retriever_raw.py  data_retriever_raw__test.py  data_retrievers.py  data_retrievers__test.py  dataset_descriptor.py  dataset_descriptor__test.py  ned_export_pipeline.py  ned_export_pipeline__test.py
pm25ml/combiners/: __init__.py  archive_wide_combiner.py  archive_wide_combiner__test.py  combined_storage__test.py
pm25ml/run/: __init__.py  download_results.py
reference/: README.md
reference/01_ee-extract/: export_MODIS_forest_grass.py  export_MODIS_savannas.py  export_MODIS_shrub.py  export_MODIS_urban.py  export_MODIS_water.py  export_elevation.py  export_surface_pressure.py  export_u_wind.py  export_v_wind.py  gee_utils.py
reference/02_first_stage_ML/: AOD_impute.py  feature_engineering.py  impute_new.py
src/pm25ml/: __init__.py  hive_path.py  logging.py  model_reference.py
src/pm25ml/collectors/: __init__.py  archive_storage.py  archive_storage__test.py  archived_file_validator.py  archived_file_validator__test.py  collector.py  collector__test.py  constants.py  export_pipeline.py  export_pipeline__test.py  geo_time_grid_dataset.py  geo_time_grid_dataset__test.py  grid__it.py  grid__test.py  grid_export_pipeline.py  grid_export_pipeline__test.py  grid_loader.py  grid_loader__it.py  grid_loader__test.py  validate_configuration.py
src/pm25ml/combiners/: __init__.py  archive_wide_combiner.py  archive_wide_combiner__test.py  combine_planner.py  combine_planner__test.py  combined_storage.py  combined_storage__test.py  combiner.py  combiner__test.py  data_artifact.py
src/pm25ml/results/: __init__.py  (+5 more)
(+112 files in other folders)
