[tool.poetry]
name = "india-map"
version = "0.1.0"
description = "Create daily PM2.5 rasters for India."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
include = [
    "pm25ml"
]
exclude = [
    "**/*__test.py"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
earthengine-api = "^1.5.7"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
geopandas = "^1.0.1"
metpy = "^1.6.3"
pyarrow = "^19.0.1"
lightgbm = "^4.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"

[tool.poetry.group.experiment.dependencies]
earthaccess = "^0.14.0"
xarray = "^2025.3.1"
netcdf4 = "^1.7.2"
dask = "^2025.3.0"
h5netcdf = "^1.6.1"
polars = "^1.27.1"
rioxarray = "^0.18.2"
pyarrow = "^19.0.1"
duckdb = "^1.2.1"
tqdm = "^4.67.1"
fastparquet = "^2024.11.0"
gcsfs = "^2025.3.2"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*__test.py"
testpaths = [
    "pm25ml"
]
pythonpath = "."
