[tool.poetry]
name = "india-map"
version = "0.1.0"
description = "Create daily PM2.5 rasters for India."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
include = [
    "pm25ml"
]
exclude = [
    "**/*__test.py",
    "**/*__it.py",
]

[tool.poetry.dependencies]
python = "^3.11"
earthengine-api = "^1.5.7"
arrow = "^1.3.0"
fsspec = "^2025.5.1"
gcsfs = "^2025.5.1"
polars = "^1.30.0"
nanoid = "^2.0.0"
xarray = "^2025.6.0"
virtualizarr = "^1.3.2"
zarr = "^3.0.8"
dask = "^2025.5.1"
earthaccess = "^0.14.0"
scipy = "^1.16.0"
pyshp = "^2.3.1"
shapely = "^2.1.1"
pyproj = "^3.7.1"
pyarrow = "^20.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
ruff = "^0.11.12"
mypy = "^1.16.0"
types-nanoid = "^2.0.0.20240601"
types-requests = "^2.32.4.20250611"
types-geopandas = "^1.0.1.20250601"
responses = "^0.25.7"
types-shapely = "^2.1.0.20250512"
pyarrow = "^20.0.0"

[tool.poetry.group.experiment.dependencies]
earthaccess = "^0.14.0"
xarray = "^2025.3.1"
netcdf4 = "^1.7.2"
dask = "^2025.3.0"
h5netcdf = "^1.6.1"
polars = "^1.27.1"
rioxarray = "^0.18.2"
duckdb = "^1.2.1"
tqdm = "^4.67.1"
fastparquet = "^2024.11.0"
gcsfs = "^2025.3.2"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"
geopandas = "^1.1.0"
gdal = "3.6.2"
pydap = "^3.5.5"
owslib = "^0.34.1"

[tool.poetry.group.reference.dependencies]
pandas = "^2.2.3"
earthengine-api = "^1.5.7"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
metpy = "^1.6.3"
lightgbm = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test",
]
python_files = [ "*__test.py", "*__it.py" ]
testpaths = [
    "pm25ml"
]
pythonpath = "."


[tool.ruff]
include = [
    "pyproject.toml",
    "./pm25ml/**/*.py",
]
exclude = [
    "./pm25ml/**/*__test.py",
    "./pm25ml/**/*__it.py",
]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
]

[tool.mypy]
exclude = ".*(__test|__it)\\.py$"

[[tool.mypy.overrides]]
module = ["fsspec.*", "gcsfs.*", "earthaccess.*", "shapefile.*"]
ignore_missing_imports = true